--- a/intro/homework.ipynb
+++ b/intro/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4526982c-65d7-49e4-93da-b056f6cf537b",
    "metadata": {},
    "outputs": [],
@@ -14,11 +14,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "22fe30d7-f0f2-47ab-ae10-015c62ef5867",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Laptop</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Brand</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>CPU</th>\n",
+       "      <th>RAM</th>\n",
+       "      <th>Storage</th>\n",
+       "      <th>Storage type</th>\n",
+       "      <th>GPU</th>\n",
+       "      <th>Screen</th>\n",
+       "      <th>Touch</th>\n",
+       "      <th>Final Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ASUS ExpertBook B1 B1502CBA-EJ0436X Intel Core...</td>\n",
+       "      <td>New</td>\n",
+       "      <td>Asus</td>\n",
+       "      <td>ExpertBook</td>\n",
+       "      <td>Intel Core i5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>512</td>\n",
+       "      <td>SSD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1009.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alurin Go Start Intel Celeron N4020/8GB/256GB ...</td>\n",
+       "      <td>New</td>\n",
+       "      <td>Alurin</td>\n",
+       "      <td>Go</td>\n",
+       "      <td>Intel Celeron</td>\n",
+       "      <td>8</td>\n",
+       "      <td>256</td>\n",
+       "      <td>SSD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>299.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ASUS ExpertBook B1 B1502CBA-EJ0424X Intel Core...</td>\n",
+       "      <td>New</td>\n",
+       "      <td>Asus</td>\n",
+       "      <td>ExpertBook</td>\n",
+       "      <td>Intel Core i3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>256</td>\n",
+       "      <td>SSD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>789.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MSI Katana GF66 12UC-082XES Intel Core i7-1270...</td>\n",
+       "      <td>New</td>\n",
+       "      <td>MSI</td>\n",
+       "      <td>Katana</td>\n",
+       "      <td>Intel Core i7</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>SSD</td>\n",
+       "      <td>RTX 3050</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1199.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HP 15S-FQ5085NS Intel Core i5-1235U/16GB/512GB...</td>\n",
+       "      <td>New</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>15S</td>\n",
+       "      <td>Intel Core i5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>512</td>\n",
+       "      <td>SSD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>669.01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Laptop Status   Brand  \\\n",
+       "0  ASUS ExpertBook B1 B1502CBA-EJ0436X Intel Core...    New    Asus   \n",
+       "1  Alurin Go Start Intel Celeron N4020/8GB/256GB ...    New  Alurin   \n",
+       "2  ASUS ExpertBook B1 B1502CBA-EJ0424X Intel Core...    New    Asus   \n",
+       "3  MSI Katana GF66 12UC-082XES Intel Core i7-1270...    New     MSI   \n",
+       "4  HP 15S-FQ5085NS Intel Core i5-1235U/16GB/512GB...    New      HP   \n",
+       "\n",
+       "        Model            CPU  RAM  Storage Storage type       GPU  Screen  \\\n",
+       "0  ExpertBook  Intel Core i5    8      512          SSD       NaN    15.6   \n",
+       "1          Go  Intel Celeron    8      256          SSD       NaN    15.6   \n",
+       "2  ExpertBook  Intel Core i3    8      256          SSD       NaN    15.6   \n",
+       "3      Katana  Intel Core i7   16     1000          SSD  RTX 3050    15.6   \n",
+       "4         15S  Intel Core i5   16      512          SSD       NaN    15.6   \n",
+       "\n",
+       "  Touch  Final Price  \n",
+       "0    No      1009.00  \n",
+       "1    No       299.00  \n",
+       "2    No       789.00  \n",
+       "3    No      1199.00  \n",
+       "4    No       669.01  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/alexeygrigorev/datasets/master/laptops.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d4587f4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.2.2'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Question_1\n",
+    "\n",
+    "pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b9c9fe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2160, 12)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Question_2\n",
+    "\n",
+    "df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a4dd8ec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Question_3\n",
+    "\n",
+    "df.Brand.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b42c3156",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Question_4\n",
+    "#Total number of columns with missing value\n",
+    "\n",
+    "col = []\n",
+    "\n",
+    "for i in df.columns:\n",
+    "    if df[i].isna().sum() != 0:\n",
+    "        col.append(i)\n",
+    "\n",
+    "col_count_with_misinval = len(col)\n",
+    "col_count_with_misinval\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fe151ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Brand\n",
+       "Dell    3936.0\n",
+       "Name: Final Price, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Question_5\n",
+    "\n",
+    "\n",
+    "df1 = df.groupby('Brand')['Final Price'].agg('max')\n",
+    "df1[df1.index=='Dell']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ccd7002",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Question_6\n",
+    "median_screen = df['Screen'].median()\n",
+    "mode_screen = df['Screen'].mode()\n",
+    "\n",
+    "print(median_screen, mode_screen)\n",
+    "\n",
+    "#df['Screen'].fillna(mode_screen, inplace=True)\n",
+    "df.fillna({'Screen': mode_screen}, inplace=True)\n",
+    "print(df['Screen'].median(), df['Screen'].mode())\n",
+    "df['Screen'].isna().sum()"
+   ]
   }
  ],
  "metadata": {
