--- a/intro/homework.ipynb
+++ b/intro/homework.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sn"
+    "import seaborn as sn\n",
+    "from numpy.linalg import inv"
    ]
   },
   {
@@ -175,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.2.2'"
+       "'2.2.3'"
       ]
      },
      "execution_count": 3,
@@ -295,21 +296,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1ccd7002",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.6 0    15.6\n",
+      "Name: Screen, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "#Question_6\n",
+    "\n",
     "median_screen = df['Screen'].median()\n",
     "mode_screen = df['Screen'].mode()\n",
     "\n",
-    "print(median_screen, mode_screen)\n",
+    "print(median_screen, mode_screen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6e6eb5d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "15.6 0    15.6\n",
+      "Name: Screen, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Screen'].isna().sum())\n",
     "\n",
-    "#df['Screen'].fillna(mode_screen, inplace=True)\n",
-    "df.fillna({'Screen': mode_screen}, inplace=True)\n",
-    "print(df['Screen'].median(), df['Screen'].mode())\n",
-    "df['Screen'].isna().sum()"
+    "df.fillna(dict.fromkeys(['Screen'], mode_screen), inplace=True)\n",
+    "\n",
+    "median_screen = df['Screen'].median()\n",
+    "mode_screen = df['Screen'].mode()\n",
+    "\n",
+    "print(median_screen, mode_screen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7b6b8e29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91.2998806299555"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Question_6\n",
+    "\n",
+    "y = [1100, 1300, 800, 900, 1000, 1100]\n",
+    "\n",
+    "X1 = df[df['Brand'] == 'Innjoo']\n",
+    "X = X1[['RAM', 'Storage', 'Screen']].values\n",
+    "XT = X.T\n",
+    "XTX = XT@X\n",
+    "XTX_inv = inv(XTX)\n",
+    "w = XTX_inv@XT@y\n",
+    "\n",
+    "w.sum()"
    ]
   }
  ],
