--- a/Others/homework2.ipynb
+++ b/Others/homework2.ipynb
@@ -315,12 +315,21 @@
    "source": [
     "df1 = df[['ram', 'storage', 'screen', 'final_price']]\n",
     "\n",
-    "sns.histplot(df1, x = \"final_price\")"
+    "sns.histplot(df1, x = \"final_price\") #check if the price has a long tail"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Introducing log transform to the price since it has a long-tai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +342,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +364,7 @@
        "16.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,30 +386,20 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X1 = df1.copy()\n",
-    "y = X1['final_price']\n",
+    "y = X1['final_price'].values\n",
+    "y1 = np.log1p(y)\n",
     "del X1['final_price']\n",
     "X = X1\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, shuffle=True)\n",
-    "X_train_New, X_val, y_train_new, y_val = train_test_split(X_train, y_train, test_size = 0.25, shuffle=True)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y1, test_size = 0.2, shuffle=True, random_state=42)\n",
+    "X_train_New, X_val, y_train_new, y_val = train_test_split(X_train, y_train, test_size = 0.25, shuffle=True, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"'\\nWe need to deal with missing values for the column from Q1.\\nWe have two options: fill it with 0 or with the mean of this variable.\\nTry both options. For each, train a linear regression model without regularization using the code from the lessons.\\nFor computing the mean, use the training only!\\nUse the validation dataset to evaluate the models and compare the RMSE of each option.\\nRound the RMSE scores to 2 decimal digits using round(score, 2)\\nWhich option gives better RMSE?\\n\\n\""
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# \n",
     "''''\n",
@@ -413,15 +412,251 @@
     "Which option gives better RMSE?\n",
     "\n",
     "'''\n",
-    "\n"
+    "\n",
+    "# function to fill missing value with 0\n",
+    "def prepare_X1(df):\n",
+    "    df_num = df.copy()\n",
+    "    df_num = df_num.fillna(0)\n",
+    "    x = df_num.values\n",
+    "    return x\n",
+    "\n",
+    "# function to fill missing value with the of the Screen feature\n",
+    "\n",
+    "def prepare_X2(df):\n",
+    "    df_num = df.copy()\n",
+    "    df_num = df_num.fillna(df_num['screen'].mean())\n",
+    "    x = df_num.values\n",
+    "    return x\n",
+    "\n",
+    "# Linear regression function\n",
+    "\n",
+    "def train_linear_regression(X, y):\n",
+    "    ones = np.ones(X.shape[0])\n",
+    "    X = np.column_stack([ones, X])\n",
+    "\n",
+    "    XTX = X.T.dot(X)\n",
+    "    XTX_inv = np.linalg.inv(XTX)\n",
+    "    w = XTX_inv.dot(X.T).dot(y)\n",
+    "    \n",
+    "    return w[0], w[1:]\n",
+    "\n",
+    "# evaluate the model\n",
+    "\n",
+    "def rmse(y, y_pred):\n",
+    "    error = y_pred - y\n",
+    "    mse = (error ** 2).mean()\n",
+    "    return round(np.sqrt(mse), 2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.43 0.43\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Case 1 of filling the available missing value with 0\n",
+    "\n",
+    "X_train_New_1 = prepare_X1(X_train_New)  \n",
+    "X_val_1 = prepare_X1(X_val)\n",
+    "X_test_1 = prepare_X1(X_test)\n",
+    "y_train_new_1 = y_train_new.copy()\n",
+    "y_val_1 = y_val.copy()\n",
+    "\n",
+    "\n",
+    "w_0, w = train_linear_regression(X_train_New_1, y_train_new_1)\n",
+    "\n",
+    "y_pred_1 = w_0 + X_train_New_1.dot(w)\n",
+    "\n",
+    "y_pred_val_1 = w_0 + X_val_1.dot(w)\n",
+    "\n",
+    "error1 = rmse(y_train_new_1, y_pred_1)\n",
+    "error_val_1 = rmse(y_val_1, y_pred_val_1)\n",
+    "\n",
+    "print(error1, error_val_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.43 0.43\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Case 2 of filling the available missing value with Screen's mean value\n",
+    "\n",
+    "X_train_New_2 = prepare_X2(X_train_New)  \n",
+    "X_val_2 = prepare_X2(X_val)\n",
+    "X_test_2 = prepare_X2(X_test)\n",
+    "y_train_new_2 = y_train_new.copy()\n",
+    "y_val_2 = y_val.copy()\n",
+    "\n",
+    "w_0, w = train_linear_regression(X_train_New_2, y_train_new_2)\n",
+    "\n",
+    "y_pred_2 = w_0 + X_train_New_2.dot(w)\n",
+    "\n",
+    "y_pred_val_2 = w_0 + X_val_2.dot(w)\n",
+    "\n",
+    "error2 = rmse(y_train_new_2, y_pred_2)\n",
+    "error_val_2 = rmse(y_val_2, y_pred_val_2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(error2, error_val_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     0 0.43\n",
+      "  0.01 0.43\n",
+      "   0.1 0.43\n",
+      "     1 0.43\n",
+      "     5 0.46\n",
+      "    10 0.5\n",
+      "   100 0.66\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Now let's train a regularized linear regression.\n",
+    "For this question, fill the NAs with 0.\n",
+    "Try different values of r from this list: [0, 0.01, 0.1, 1, 5, 10, 100].\n",
+    "Use RMSE to evaluate the model on the validation dataset.\n",
+    "Round the RMSE scores to 2 decimal digits.\n",
+    "Which r gives the best RMSE?\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "def train_linear_regression_reg(X, y, r):\n",
+    "    ones = np.ones(X.shape[0])\n",
+    "    X = np.column_stack([ones, X])\n",
+    "\n",
+    "    XTX = X.T.dot(X)\n",
+    "    reg = r * np.eye(XTX.shape[0])\n",
+    "    XTX = XTX + reg\n",
+    "    XTX_inv = np.linalg.inv(XTX)\n",
+    "    w = XTX_inv.dot(X.T).dot(y)\n",
+    "    \n",
+    "    return w[0], w[1:]\n",
+    "\n",
+    "regu = [0, 0.01, 0.1, 1, 5, 10, 100]\n",
+    "\n",
+    "for r in regu:\n",
+    "    w_0, w = train_linear_regression_reg(X_train_New_1, y_train_new_1, r=r)\n",
+    "    y_pred = w_0 + X_val_1.dot(w)\n",
+    "    print('%6s' %r, round(rmse(y_val_1, y_pred), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.289"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "We used seed 42 for splitting the data. Let's find out how selecting the seed influences our score.\n",
+    "Try different seed values: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9].\n",
+    "For each seed, do the train/validation/test split with 60%/20%/20% distribution.\n",
+    "Fill the missing values with 0 and train a model without regularization.\n",
+    "For each seed, evaluate the model on the validation dataset and collect the RMSE scores.\n",
+    "What's the standard deviation of all the scores? To compute the standard deviation, use np.std.\n",
+    "Round the result to 3 decimal digits (round(std, 3))\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "seed = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "all_rmse = []\n",
+    "\n",
+    "for s in seed:\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, shuffle=True, random_state=s)\n",
+    "    X_train_New, X_val, y_train_new, y_val = train_test_split(X_train, y_train, test_size = 0.25, shuffle=True, random_state=s)\n",
+    "\n",
+    "    X_train_New_1 = prepare_X1(X_train_New)  \n",
+    "    X_val_1 = prepare_X1(X_val)\n",
+    "    X_test_1 = prepare_X1(X_test)\n",
+    "    y_train_new_1 = y_train_new.copy()\n",
+    "    y_val_1 = y_val.copy()\n",
+    "\n",
+    "    w_0, w = train_linear_regression(X_train_New_1, y_train_new_1)\n",
+    "    y_pred_new = w_0 + X_val_1.dot(w)\n",
+    "    errorr = rmse(y_val_1, y_pred_new)\n",
+    "    all_rmse.append(errorr)\n",
+    "    \n",
+    "\n",
+    "std_dev = round(np.std(all_rmse), 3)\n",
+    "std_dev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "535.08"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Split the dataset like previously, use seed 9.\n",
+    "Combine train and validation datasets.\n",
+    "Fill the missing values with 0 and train a model with r=0.001.\n",
+    "What's the RMSE on the test dataset?\n",
+    "\n",
+    "'''\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, shuffle=True, random_state=9)\n",
+    "df_train = prepare_X1(X_train)\n",
+    "df_test = prepare_X1(X_test)\n",
+    "\n",
+    "\n",
+    "w_0, w = train_linear_regression_reg(df_train, y_train, r=0.001)\n",
+    "y_predd = w_0 + df_test.dot(w)\n",
+    "\n",
+    "err = rmse(y_test, y_predd)\n",
+    "\n",
+    "err"
+   ]
   }
  ],
  "metadata": {
