--- a/Others/homework2.ipynb
+++ b/Others/homework2.ipynb
@@ -322,15 +322,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Introducing log transform to the price since it has a long-tai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -342,7 +333,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +355,7 @@
        "16.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,17 +378,17 @@
     "\n",
     "X1 = df1.copy()\n",
     "y = X1['final_price'].values\n",
-    "y1 = np.log1p(y)\n",
+    "y1 = np.log1p(y) # Introducing log transform to the price since it has a long-tail\n",
     "del X1['final_price']\n",
     "X = X1\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y1, test_size = 0.2, shuffle=True, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, shuffle=True, random_state=42)\n",
     "X_train_New, X_val, y_train_new, y_val = train_test_split(X_train, y_train, test_size = 0.25, shuffle=True, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,14 +441,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.43 0.43\n"
+      "581.35\n"
      ]
     }
    ],
@@ -477,22 +468,21 @@
     "\n",
     "y_pred_val_1 = w_0 + X_val_1.dot(w)\n",
     "\n",
-    "error1 = rmse(y_train_new_1, y_pred_1)\n",
     "error_val_1 = rmse(y_val_1, y_pred_val_1)\n",
     "\n",
-    "print(error1, error_val_1)"
+    "print(error_val_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.43 0.43\n"
+      "579.97\n"
      ]
     }
    ],
@@ -511,30 +501,29 @@
     "\n",
     "y_pred_val_2 = w_0 + X_val_2.dot(w)\n",
     "\n",
-    "error2 = rmse(y_train_new_2, y_pred_2)\n",
     "error_val_2 = rmse(y_val_2, y_pred_val_2)\n",
     "\n",
     "\n",
     "\n",
-    "print(error2, error_val_2)"
+    "print(error_val_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     0 0.43\n",
-      "  0.01 0.43\n",
-      "   0.1 0.43\n",
-      "     1 0.43\n",
-      "     5 0.46\n",
-      "    10 0.5\n",
-      "   100 0.66\n"
+      "     0 581.35\n",
+      "  0.01 581.35\n",
+      "   0.1 581.3\n",
+      "     1 580.91\n",
+      "     5 580.04\n",
+      "    10 579.71\n",
+      "   100 579.78\n"
      ]
     }
    ],
@@ -572,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +570,7 @@
        "36.289"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +621,7 @@
        "535.08"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
